fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ h1 {
   background-color: #d9d9d9 !important;
   caret-color: #908378 !important;
   font-family: "Sorts Mill Goudy", serif !important;
+  color: black;
 }
 
 [data-baseweb="base-input"] input::placeholder {
