--- a/src/components/room/room.css
+++ b/src/components/room/room.css
@@ -34,19 +34,37 @@
 
 /* Room container */
 .room-container {
-  width: 80%;
-  height: 40rem;
-  max-width: 1000px;
-  margin-top: -4rem;
+  width: 88%;
+  height: 42rem;
+  max-width: 1400px;
+  margin: 1rem auto 4rem;
   padding: 20px;
   background-color: #f4f4f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.room-container .username {
+  font-family: "Sorts Mill Goudy", serif;
+  font-weight: 800;
+}
+
+.room-container .username span {
+  margin-left: -1px;
+}
+
+.message-input-container .username span {
+  font-family: "Courier New", monospace;
+  font-size: 1.3rem;
+}
+
+.message-input-container .username strong {
+  font-size: 1.2rem;
+}
+
 /* Messages container */
 .messages-container {
-  height: 30rem;
+  height: 32rem;
   overflow-y: auto;
   margin-bottom: 20px;
   padding: 10px;
@@ -55,7 +73,7 @@
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
 
   font-family: "Inter", sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   position: relative;
 }
 
@@ -86,6 +104,10 @@
   justify-content: space-between;
   align-items: center;
   font-family: "Inter", sans-serif;
+}
+
+.message-input-container .username-on-input {
+  margin: 0rem 0.5rem;
 }
 
 /* Input field */
